fix dual USB ports detection (#17)
* Implement a scheme to detect the presence of a USB port when using
  the `DUAL_USB` port feature with bus switches. The strategy used
  to identify the port relies on the fact the the USB host will have
  pull-down resistors on the data lines and an I2C port will have
  pull-up resistors.

--- a/xmega/Makefile
+++ b/xmega/Makefile
@@ -144,8 +144,12 @@ endif
 
 CDEFS += -DUSE_CHECK_PIN=$(USE_CHECK_PIN)
 
-ifeq ($(TESTING), 1)
-  CDEFS += -DUSB_BUFFERED=$(TESTING)
+# TODO:
+CDEFS += -DUSB_BUFFERED=0
+
+ifdef DUAL_USB
+  CDEFS += -DDUAL_USB=1
+  C_SRC += dual_usb.c
 endif
 
 ifdef DEBUG_LEVEL
