got usb BOS descriptor working
* Got the binary object store object needed for webusb working.
* Needed to change the USB revision to 2.0.1 for BOS
* Trying out a hack to use the same endpoints for two different
  interfaces, one for webusb, one for rawhid
* Browser still won't connect to the device, gets this error:
  "NotFoundError: The device was disconnected." when trying to open the
  device.

--- a/layouts/basic_split_test.yaml
+++ b/layouts/basic_split_test.yaml
@@ -164,7 +164,7 @@ devices:
     layout_offset: 1
 
   # rf dongle
-  nrf_dongle:
+  "keyplus nRF dongle":
     id: 48
     scan_mode: # rf dongle, so don't need a matrix
       mode: no_matrix # options: col_row, pins, no_matrix
