hold/tap keycodes now supported in layout file
* Add hold keycodes to layout file
* BUG: currently `queue_keycode_event` will apply the keycode to any
  keyboard. This is a temporary fix until I find out why hold keycodes
  are getting `0xFF` as the active keyboard id from `get_active_keyboard_id()`.

--- a/layouts/basic_split_test.yaml
+++ b/layouts/basic_split_test.yaml
@@ -307,7 +307,7 @@ layouts:
       [ # layer 0 (colemak)
         [ # left hand
           tab , q   , w   , f   , p   , g   ,
-          ent , a   , r   , s   , t   , d   ,
+          SFTEnt , a   , r   , s   , t   , d   ,
           lalt, z   , x   , c   , v   , b   ,
           esc , L4  , L4  , lctl  , L3  , spc ,
         ],
