--- a/nrf24lu1/Makefile
+++ b/nrf24lu1/Makefile
@@ -236,6 +236,7 @@ $(OBJ_DIR)/%.dep: %.c
 
 clean:
 	rm -f $(TARGET).hex
+	rm -f $(TARGET)-*.hex
 	rm -f $(TARGET)-uni.hex
 	rm -fr $(OBJ_DIR)
 	rm -fr nrfburn.txt
