don't store row/col data when NO_MATRIX is set

--- a/nrf24lu1/Makefile
+++ b/nrf24lu1/Makefile
@@ -9,7 +9,7 @@ TARGET	= nrf24lu1_keyboard
 OBJ_DIR	= obj
 MCU		= NRF24LU1
 F_CPU	= 16000000
-MCU_STRING = nRF24LU1P
+MCU_STRING = nRF24LU1P_F32
 
 # valid 16 or 32
 FLASH_SIZE = 32
