--- a/xmega/Makefile
+++ b/xmega/Makefile
@@ -154,9 +154,9 @@ MAKEFILE_INC += Makefile
 LD_SCRIPT_DIR = ./ld-scripts
 
 ifeq ($(MCU_FLASH_SIZE), 32)
-  SETTING_ADDR := 0x6E00
-  LAYOUT_ADDR := 0x7000
-  LAYOUT_SIZE := 0x1000
+  SETTING_ADDR := 0x7600
+  LAYOUT_ADDR := 0x7800
+  LAYOUT_SIZE := 0x0800
 else ifeq ($(MCU_FLASH_SIZE), 64)
   SETTING_ADDR := 0x7E00
   LAYOUT_ADDR := 0x8000
