xmega build system working with new api

--- a/xmega/Makefile
+++ b/xmega/Makefile
@@ -201,7 +201,9 @@ $(MERGED_HEX): $(TARGET_HEX) $(LAYOUT_FILE) $(RF_FILE)
 		--rf $(RF_FILE) \
 		--fw-hex $(TARGET_HEX) \
 		-M $(SETTING_ADDR) $(LAYOUT_ADDR) $(LAYOUT_SIZE) \
-		-o $(MERGED_HEX)
+		-o $(MERGED_HEX) \
+		-F chip_name=$(MCU_STRING) \
+		-F scan_method=fast_row_col \
 
 program: $(MERGED_HEX) program-boot
 
